# Electron-Platform-Helper

./: .gitattributes  .gitignore  Cargo.toml  ElectronPlatform.toml
gui/: package-lock.json  package.json
gui/config/: webpack.config.dev.js  webpack.config.prod.js
gui/public/: index.html
gui/src/: index.js
gui/src/components/App/: index.js  index.scss
gui/src/components/Background/: index.js  index.scss
gui/src/styles/: common.scss
gui/src/utils/: rpc.js
src/: helper.rs  installer.rs  main.rs  model.rs  utils.rs
src/downloader/: mod.rs
src/helper/: mod.rs
src/installer/: mod.rs
src/model/: mod.rs
src/rpc/: mod.rs
src/statics/: mod.rs
src/todo/: index.html
src/utils/: mod.rs
src/view/js/: main.js  main.js.map  rpc.js
view/: index.html
