[package]
name = "el"
version = "0.1.0"
authors = ["HuQingyang <i@do.codes>"]

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view" }
serde_derive = "^1.0.80"
serde_json = "^1.0.32"
serde = "^1.0.80"
toml = "^0.4.8"
regex = "^1"
lazy_static = "^1.1.0"
reqwest = "^0.9.4"
unzip = "^0.1.0"
timer = "^0.2.0"
chrono = "^0.4.6"
futures = "*"
tokio = "*"
